# commandblock

./: Cargo.toml  Dockerfile  Makefile  PROJECT  README.md  crd.yaml  deployment.yaml  go.mod  main.go
.github/workflows/: docker-image.yml
cmd/: main.go
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
src/: main.rs
test/e2e/: e2e_suite_test.go  e2e_test.go
