[package]
name = "commandblock"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "*", features = ["runtime", "derive"] }
kube-runtime = "0.98.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }